@@ -1,4 +1,5 @@
 HEAD
+    + Allow anste-master to run multiple scripts in the same host
     + Added support for global variables in test suites
     + Add support for trusty to properly bring up network interfaces
     + Remove TryCatch::Lite depend in anste-slave
